--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,100 @@
 spring:
+  application:
+    name: bookjourney
   profiles:
+    group:
+      local: db-local, common
+      dev: db-dev, common
+      prod: db-prod, common
     active: local
+
+---
+#개발용 DB
+spring:
+  config:
+    activate:
+      on-profile: dev
+
+  datasource:
+    url: jdbc:mysql://${DB_HOST}:3306/book_journey
+    username: ${DEV_DB_USER}
+    password: ${DEV_DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.MySQLDialect
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
+---
+#로컬용 DB
+spring:
+  config:
+    activate:
+      on-profile: local
+
+  datasource:
+    url: jdbc:h2:mem:~/BookJourneyBackendApplication;MODE=MYSQL
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.MySQLDialect
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
+---
+#배포용 DB
+spring:
+  config:
+    activate:
+      on-profile: prod
+
+  datasource:
+    url: jdbc:mysql://:3306/book_journey
+    username: ${PROD_DB_USER}
+    password: ${PROD_DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.MySQLDialect
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
+---
+#공통
+spring:
+  config:
+    activate:
+      on-profile: common
 
   mail:
     host: smtp.gmail.com
@@ -19,121 +113,16 @@ spring:
           writetimeout: 5000
     auth-code-expiration-millis: 1800000  # 30 * 60 * 1000 == 30?
 
----
-spring:
-  config:
-    activate:
-      on-profile: dev
-
-  datasource:
-    url: jdbc:mysql://${DB_HOST}:3306/book_journey
-    username: ${DB_USER}
-    password: ${DB_PASSWORD}
-    driver-class-name: com.mysql.cj.jdbc.Driver
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-        dialect: org.hibernate.dialect.MySQLDialect
-
-  data:
-    redis:
-      host: localhost
-      port: 6379
-
 server:
   port: 8080
   servlet:
     context-path: /
-
-jwt:
-  secret: ${JWT_SECRET}
-  expiration: 108000000 #30??
-
----
-spring:
-  config:
-    activate:
-      on-profile: local
-
-  datasource:
-    url: jdbc:mysql://localhost:3306/book_journey
-    username: ${LOCAL_DB_USER}
-    password: ${LOCAL_DB_PASSWORD}
-    driver-class-name: com.mysql.cj.jdbc.Driver
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-        dialect: org.hibernate.dialect.MySQLDialect
-
-
-  data:
-    redis:
-      host: localhost
-      port: 6379
-
-server:
-  port: 8080
-  servlet:
-    context-path: /
-#
-#logging:
-#  level:
-#    root: DEBUG
-#    org.springframework.mail: DEBUG
 
 jwt:
   secret: ${JWT_SECRET}
   expiration: 10800000 #30??
 
----
-
-
-spring:
-  config:
-    activate:
-      on-profile: prod
-
-  datasource:
-    url: jdbc:mysql://:3306/book_journey
-    username: ${LOCAL_DB_USER}
-    password: ${LOCAL_DB_PASSWORD}
-    driver-class-name: com.mysql.cj.jdbc.Driver
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-        dialect: org.hibernate.dialect.MySQLDialect
-
-
-  data:
-    redis:
-      host: localhost
-      port: 6379
-
-server:
-  port: 8080
-  servlet:
-    context-path: /
-#
 #logging:
 #  level:
 #    root: DEBUG
 #    org.springframework.mail: DEBUG
-
-jwt:
-  secret: ${JWT_SECRET}
-  expiration: 10800000 #30??
