--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,12 +41,31 @@ spring:
   config:
     activate:
       on-profile: local
+  #
+  #  datasource:
+  #    url: jdbc:mysql://localhost:3306/book_journey
+  #    username: ${LOCAL_DB_USER}
+  #    password: ${LOCAL_DB_PASSWORD}
+  #    driver-class-name: com.mysql.cj.jdbc.Driver
+  #
+  #  jpa:
+  #    hibernate:
+  #      ddl-auto: update
+  #    show-sql: true
+  #    properties:
+  #      hibernate:
+  #        format_sql: true
+  #        dialect: org.hibernate.dialect.MySQLDialect
 
   datasource:
-    url: jdbc:h2:mem:~/BookJourneyBackendApplication;MODE=MYSQL
+    url: jdbc:h2:mem:BookJourneyBackendApplication;MODE=MYSQL;
     username: sa
     password:
     driver-class-name: org.h2.Driver
+
+  h2:
+    console:
+      enabled: true
 
   jpa:
     hibernate:
@@ -55,7 +74,6 @@ spring:
     properties:
       hibernate:
         format_sql: true
-        dialect: org.hibernate.dialect.MySQLDialect
 
   data:
     redis:
@@ -95,6 +113,10 @@ spring:
   config:
     activate:
       on-profile: common
+
+  docker:
+    compose:
+      enabled: false
 
   mail:
     host: smtp.gmail.com
