--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -176,7 +176,8 @@ spring:
 
 jwt:
   secret: ${JWT_SECRET}
-  expiration: 10800000 #30??
+  access-token-expiration: 3600000 #1시간
+  refresh-token-expiration: 604800000 #7일
 
 #logging:
 #  level:
