--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,8 @@ dependencies {
 
     //Jackson (JSON 파싱용)
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
+    // LocalDateTime 처리를 위한 jackson-datatype-jsr310 의존성 추가
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.0'
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
