--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -95,13 +95,17 @@ spring:
       host: localhost
       port: 6379
 
+jwt:
+  secret: ${JWT_SECRET}
+  access-token-expiration: 604800000 #7일
+  refresh-token-expiration: 1209600000 # 14일 (14 * 24 * 60 * 60 * 1000)
+
 ---
 #배포용 DB
 spring:
   config:
     activate:
       on-profile: prod
-
   datasource:
     url: jdbc:mysql://:3306/book_journey
     username: ${PROD_DB_USER}
@@ -121,6 +125,12 @@ spring:
     redis:
       host: localhost
       port: 6379
+
+jwt:
+  secret: ${JWT_SECRET}
+  access-token-expiration: 3600000 #1시간
+  refresh-token-expiration: 604800000 #7일
+
 
 ---
 #개발용 및 배포용 포트
@@ -174,10 +184,6 @@ spring:
           writetimeout: 5000
     auth-code-expiration-millis: 1800000  # 30 * 60 * 1000 == 30?
 
-jwt:
-  secret: ${JWT_SECRET}
-  access-token-expiration: 3600000 #1시간
-  refresh-token-expiration: 604800000 #7일
 
 aladin:
   key: ${ALADIN_API_KEY}
