--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -59,7 +59,7 @@ jobs:
             
             echo "🌱 Running new container"
             sudo docker run -d -p 8000:8080 --name bookjourney-backend \
-            -e JWT_SECRET_KEY="${{ secrets.JWT_SECRET_KEY }}" \
+            -e JWT_SECRET="${{ secrets.JWT_SECRET }}" \
             -e ALADIN_API_KEY="${{ secrets.ALADIN_API_KEY }}" \
             ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }}
 
