[chore] application.yml 배포환경 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,36 +4,8 @@ spring:
   profiles:
     group:
       local: db-local, port-local, common
-      dev: db-dev, port-dev, common
-      prod: db-prod, port-dev, common
-    active: local
-
----
-#개발용 DB
-spring:
-  config:
-    activate:
-      on-profile: dev
-
-  datasource:
-    url: jdbc:mysql://${DB_HOST}:3306/book_journey
-    username: ${DEV_DB_USER}
-    password: ${DEV_DB_PASSWORD}
-    driver-class-name: com.mysql.cj.jdbc.Driver
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-        dialect: org.hibernate.dialect.MySQLDialect
-
-  data:
-    redis:
-      host: localhost
-      port: 6379
+      prod: db-prod, port-prod, common
+    active: prod
 
 ---
 #로컬용 DB
@@ -56,21 +28,6 @@ spring:
   #      hibernate:
   #        format_sql: true
   #        dialect: org.hibernate.dialect.MySQLDialect
-
-#  datasource:
-#    url: jdbc:mysql://localhost:3306/book_journey
-#    username: ${LOCAL_DB_USER}
-#    password: ${LOCAL_DB_PASSWORD}
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#
-#  jpa:
-#    hibernate:
-#      ddl-auto: update
-#    show-sql: true
-#    properties:
-#      hibernate:
-#        format_sql: true
-#        dialect: org.hibernate.dialect.MySQLDialect
 
   datasource:
     url: jdbc:h2:mem:BookJourneyBackendApplication;MODE=MYSQL;
@@ -95,6 +52,10 @@ spring:
       host: localhost
       port: 6379
 
+  docker:
+    compose:
+      enabled: false  # local 환경에서 Docker Compose 비활성화
+
 jwt:
   secret: ${JWT_SECRET}
   access-token-expiration: 604800000 #7일
@@ -110,10 +71,15 @@ spring:
   config:
     activate:
       on-profile: prod
+#  datasource:
+#    url: jdbc:mysql://:3306/book_journey
+#    username: ${PROD_DB_USER}
+#    password: ${PROD_DB_PASSWORD}
+#    driver-class-name: com.mysql.cj.jdbc.Driver
   datasource:
-    url: jdbc:mysql://:3306/book_journey
-    username: ${PROD_DB_USER}
-    password: ${PROD_DB_PASSWORD}
+    url: jdbc:mysql://mysql:3306/mydb
+    username: book_journey
+    password: secret
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
@@ -130,6 +96,10 @@ spring:
       host: localhost
       port: 6379
 
+  docker:
+    compose:
+      enabled: true  # prod 환경에서 Docker Compose 활성화
+
 jwt:
   secret: ${JWT_SECRET}
   access-token-expiration: 3600000 #1시간
@@ -137,14 +107,14 @@ jwt:
 
 
 ---
-#개발용 및 배포용 포트
+#배포용 포트
 spring:
   config:
     activate:
-      on-profile: port-dev
+      on-profile: port-prod
 
 server:
-  port: 9000
+  port: 8080
   servlet:
     context-path: /
 
@@ -167,10 +137,6 @@ spring:
     activate:
       on-profile: common
 
-  docker:
-    compose:
-      enabled: false
-
   mail:
     host: smtp.gmail.com
     port: 587
@@ -188,11 +154,5 @@ spring:
           writetimeout: 5000
     auth-code-expiration-millis: 1800000  # 30 * 60 * 1000 == 30?
 
-
 aladin:
   key: ${ALADIN_API_KEY}
-
-#logging:
-#  level:
-#    root: DEBUG
-#    org.springframework.mail: DEBUG
