--- a/compose.yaml
+++ b/compose.yaml
@@ -2,9 +2,13 @@ services:
   mysql:
     image: 'mysql:latest'
     environment:
-      - 'MYSQL_DATABASE=mydatabase'
-      - 'MYSQL_PASSWORD=secret'
+      - 'MYSQL_DATABASE=mydb'
       - 'MYSQL_ROOT_PASSWORD=verysecret'
-      - 'MYSQL_USER=myuser'
     ports:
       - '3307:3306'
+
+  redis:
+    image: 'redis:latest'
+    container_name: redis-server
+    ports:
+      - '6379:6379'
