--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -78,8 +78,8 @@ spring:
 #    driver-class-name: com.mysql.cj.jdbc.Driver
   datasource:
     url: jdbc:mysql://mysql:3306/mydb
-    username: book_journey
-    password: secret
+    username: root
+    password: verysecret
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
