--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -55,20 +55,14 @@ jobs:
         
             sudo docker ps -a
             
-            echo "🧹 Cleaning up old containers and images"
-            sudo docker system prune -af
-            
             echo "🥳 Pulling new image"
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }}
-
-            echo "🛠 Running docker-compose"
-            sudo docker-compose up -d --build
             
-            # echo "🌱 Running new container"
-            # sudo docker run -d -p 8000:8080 --name bookjourney-backend \
-            # -e JWT_SECRET="${{ secrets.JWT_SECRET }}" \
-            # -e ALADIN_API_KEY="${{ secrets.ALADIN_API_KEY }}" \
-            # ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }}
+            echo "🌱 Running new container"
+            sudo docker run -d -p 8000:8080 --name bookjourney-backend \
+            -e JWT_SECRET="${{ secrets.JWT_SECRET }}" \
+            -e ALADIN_API_KEY="${{ secrets.ALADIN_API_KEY }}" \
+            ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }}
 
-            # echo "🚮 Cleaning up old images"
-            # sudo docker image prune -f
+            echo "🚮 Cleaning up old images"
+            sudo docker image prune -f
