--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,30 @@
 services:
-  mysql:
-    image: 'mysql:latest'
+  my-server:
+    build: .
+    ports:
+      - 8080:8080
+    depends_on:
+      my-db:
+        condition: service_healthy
+      my-cache-server:
+        condition: service_healthy
+  my-db:
+    image: mysql:latest
     environment:
-      - 'MYSQL_DATABASE=mydb'
-      - 'MYSQL_ROOT_PASSWORD=verysecret'
+      MYSQL_ROOT_PASSWORD: verysecret
+      MYSQL_DATABASE: mydb
     ports:
-      - '3307:3306'
+      - 3307:3306
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping" ]
+      interval: 5s
+      retries: 10
 
-  redis:
-    image: 'redis:latest'
-    container_name: redis-server
+  my-cache-server:
+    image: redis
     ports:
-      - '6379:6379'
+      - 6379:6379
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 5s
+      retries: 10
