--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: 🐳 Docker build & push
         run:  |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          # docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
           # docker build -f Dockerfile -t ${{ secrets.DOCKER_IMAGE }} .
           # docker push ${{ secrets.DOCKER_IMAGE }}
 
