--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -149,10 +149,10 @@ spring:
           starttls:
             enable: true
             required: true
-          connectiontimeout: 5000
+          connectiontimeout: 5000 #5초
           timeout: 5000
           writetimeout: 5000
-    auth-code-expiration-millis: 1800000  # 30 * 60 * 1000 == 30?
+    auth-code-expiration-minutes: 1  #30분
 
 aladin:
   key: ${ALADIN_API_KEY}
