[fix] 스웨거 관련 yml 파일 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -157,3 +157,11 @@ spring:
 
 aladin:
   key: ${ALADIN_API_KEY}
+
+springdoc:
+  api-docs:
+    enabled: true
+    path: /v3/api-docs
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
