--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -159,9 +159,6 @@ aladin:
   key: ${ALADIN_API_KEY}
 
 springdoc:
-  api-docs:
-    enabled: true
-    path: /v3/api-docs
   swagger-ui:
     enabled: true
-    path: /swagger-ui.html
+    path: /swagger-ui/index.html
