[chore]: pr에서는 cd 안되도록 수정 (#136)

--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -40,6 +40,7 @@ jobs:
           # docker push ${{ secrets.DOCKER_IMAGE }}
 
       - name: 🚀 deploy to server
+        if: github.event_name == 'push'
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
