[refactor]: 배포서버 기존 db삭제 (#141)

--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -57,7 +57,7 @@ jobs:
 
             cd bookJourney-backend
             git pull origin develop
-            sudo docker-compose down
+            sudo docker-compose down -v
 
              ./gradlew clean
              set -a && source .env && set +a && ./gradlew build
