[fix]: 더미데이터 최초 삽입후 추후 삽입 방지(#141)

--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -57,7 +57,7 @@ jobs:
 
             cd bookJourney-backend
             git pull origin develop
-            sudo docker-compose down -v
+            sudo docker-compose down
 
              ./gradlew clean
              set -a && source .env && set +a && ./gradlew build
