--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,31 +13,12 @@ spring:
   config:
     activate:
       on-profile: local
-  #
-  #  datasource:
-  #    url: jdbc:mysql://localhost:3306/book_journey
-  #    username: ${LOCAL_DB_USER}
-  #    password: ${LOCAL_DB_PASSWORD}
-  #    driver-class-name: com.mysql.cj.jdbc.Driver
-  #
-  #  jpa:
-  #    hibernate:
-  #      ddl-auto: update
-  #    show-sql: true
-  #    properties:
-  #      hibernate:
-  #        format_sql: true
-  #        dialect: org.hibernate.dialect.MySQLDialect
 
   datasource:
-    url: jdbc:h2:mem:BookJourneyBackendApplication;MODE=MYSQL;
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
-
-  h2:
-    console:
-      enabled: true
+    url: jdbc:mysql://localhost:3306/book_journey
+    username: ${LOCAL_DB_USER}
+    password: ${LOCAL_DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
@@ -46,6 +27,25 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.MySQLDialect
+
+#  datasource:
+#    url: jdbc:h2:mem:BookJourneyBackendApplication;MODE=MYSQL;
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
+#
+#  h2:
+#    console:
+#      enabled: true
+#
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        format_sql: true
 
   data:
     redis:
