--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     //AWS S3
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
+    //StringEscapeUtils를 위한 commons-text 의존성 추가
+    implementation 'org.apache.commons:commons-text:1.10.0'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
     runtimeOnly 'com.h2database:h2'
