--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -137,6 +137,12 @@ spring:
     activate:
       on-profile: common
 
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB   # 개별 파일의 최대 크기 (10MB로 변경)
+      max-request-size: 20MB # 전체 요청 크기 (20MB로 변경)
+
   mail:
     host: smtp.gmail.com
     port: 587
