--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -102,8 +102,8 @@ spring:
 
 jwt:
   secret: ${JWT_SECRET}
-  access-token-expiration: 604800000 #7일
-  refresh-token-expiration: 1209600000 # 14일 (14 * 24 * 60 * 60 * 1000)
+  access-token-expiration: 60000 # 1분
+  refresh-token-expiration: 300000 # 5분
 
 
 ---
